--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
     "name": "pyro/webpack",
-    "description": "",
+    "description": "PyroCMS Webpack for admin frontend",
     "license": "MIT",
-    "require": {},
+    "require": {
+        "laradic/support": "~2.0"
+    },
     "autoload": {
         "psr-4": {
             "Pyro\\Webpack\\": "src/"
