--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
         "psr-4": {
             "Pyro\\Webpack\\": "src/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.1.x-dev"
+        }
     }
 }
