--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "laradic/support": "~2.0",
-        "ocramius/generated-hydrator": "~3.0"
+        "ocramius/generated-hydrator": "3.0.*"
     },
     "autoload": {
         "psr-4": {
