--- a/package.json
+++ b/package.json
@@ -18,13 +18,20 @@
     "dependencies": {
         "@types/dotenv": "^8.2.0",
         "@types/webpack-chain": "^5.2.0",
+        "@types/webpack-dev-middleware": "^3.7.2",
+        "@types/webpack-hot-middleware": "^2.25.3",
         "dotenv": "^8.2.0",
         "json-schema-to-typescript": "^7.1.0",
         "lodash": "^4.17.15",
         "mysqldump": "^3.1.0",
         "quicktype": "^15.0.207",
         "sql-ddl-to-json-schema": "^3.1.2",
-        "tapable": "^1.1.3"
+        "tapable": "^1.1.3",
+        "webpack-dev-middleware": "^4.0.2",
+        "webpack-hot-middleware": "^2.25.0",
+        "webpack-dev-server": "^3.11.0",
+        "express": "^4.17.1",
+        "browser-sync": "^2.26.13"
     },
     "devDependencies": {},
     "peerDependencies": {
