--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "typings": "dist/index.d.ts",
+    "bin": {
+        "pwb": "bin/pwb"
+    },
     "scripts": {
         "start": "npm-run-all clean:build build",
         "test": "echo \"test not implemented\" && exit 0",
@@ -23,17 +26,27 @@
         "dotenv": "^8.2.0",
         "json-schema-to-typescript": "^7.1.0",
         "lodash": "^4.17.15",
+        "find-up": "^5.0.0",
         "mysqldump": "^3.1.0",
         "quicktype": "^15.0.207",
         "sql-ddl-to-json-schema": "^3.1.2",
         "tapable": "^1.1.3",
         "webpack-dev-middleware": "^4.0.2",
+        "term-size": "^2.2.1",
+        "@types/term-size": "^2.0.3",
         "webpack-hot-middleware": "^2.25.0",
         "webpack-dev-server": "^3.11.0",
         "express": "^4.17.1",
-        "browser-sync": "^2.26.13"
+        "browser-sync": "^2.26.13",
+        "yargs": "^16.1.1",
+        "@types/yargs": "^15.0.10",
+        "inquirer": "^7.3.3",
+        "@types/inquirer": "^7.3.1",
+        "@radic/console-input": "^1.1.0",
+        "@radic/console-output": "^1.3.2"
     },
-    "devDependencies": {},
+    "devDependencies": {
+    },
     "peerDependencies": {
         "@radic/webpacker": "^7.0.0",
         "webpack": "^4.40.2",
